# GiBi

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: GameBoy.h  constants.h  gameboy.h  gibi.h  joypad.h  options.h  serial.h  timings.h  ui.h
include/cpu/: cpu.h  decoder.h  instr_timings.h  instructions.h  interrupts.h  opcode.h  opcode_info.h  timer.h  timings.h
include/mmu/: bus.h  cartridge.h  memory.h
include/ppu/: lcdc.h  lcdstatus.h  ppu.h
src/: GameBoy.cpp  gameboy.cpp  joypad.cpp  main.cpp  ui.cpp
src/cpu/: cpu.cpp  decoder.cpp  timer.cpp
src/mmu/: bus.cpp  cartridge.cpp
src/ppu/: ppu.cpp
